Dodatečná oprava dle instrukcí.
Ahoj Terezo,
děkuji za opravu a opoznámkování. Nakonec jsem ještě opravila "calc" na konci css souboru.

Bohužel jsem nepřišla na způsob, jak opravit opoznámkovaný soubor a proto posílám vše ještě jednou.

--- a/style.css
+++ b/style.css
@@ -39,14 +39,13 @@ flex-wrap: wrap;
 	min-width: 250px;
 }
 
-@media (min-with: 540px) {
+@media (min-width: 540px) {
 	.tym {
-		display:flex;
 		flex-wrap: wrap;
 	}
 	.clenka{
 		text-align: left;
-		width: calc ( (100% - 40px)/2);
+		width: calc( (100% - 40px)/2);
 	}
 	}
 
@@ -55,12 +54,11 @@ flex-wrap: wrap;
 	 float:none;
  }
  .tym{
-	 display: flex;
-	 flex-wrap: no-wrap;
+	 flex-wrap: nowrap;
  }
  .clenka {
 	 display:block;
 	 text-align: centre;
-	 width: calc ( (100% - 80px) / 4);
+	 width: calc( (100% - 80px) / 4);
  }
 }
